--- a/MiniWebsite/mini-website/package.json
+++ b/MiniWebsite/mini-website/package.json
@@ -10,6 +10,7 @@
     "framer-motion": "^11.0.25",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.10.1",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
